--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-10-18 00:21+0200\n"
+"POT-Creation-Date: 2018-11-02 11:57+0100\n"
 "PO-Revision-Date: 2018-10-16 20:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -38,31 +38,36 @@ msgstr ""
 msgid "Venue"
 msgstr "Miesto konania"
 
-#: templates/body.html:51 templates/tickets.html:14
+#: templates/body.html:51 templates/faq.html:8 templates/faq.html:46
+#: templates/tickets.html:14
 msgid "Tickets"
 msgstr "Vstupenky"
 
 #: templates/body.html:54 templates/cfp.html:8
 msgid "Call for proposals"
-msgstr "Výzva na predloženie návrhov na prednášky"
+msgstr "Prihlás návrh na prednášku"
 
-#: templates/body.html:57
+#: templates/body.html:57 templates/cfv.html:8
+msgid "Call for volunteers"
+msgstr "Pridaj sa k nám"
+
+#: templates/body.html:60
 msgid "Sponsoring"
 msgstr "Sponzoruj"
 
-#: templates/body.html:60 templates/coc.html:7
+#: templates/body.html:63 templates/coc.html:7
 msgid "Code of Conduct"
 msgstr "Kódex správania"
 
-#: templates/body.html:63
+#: templates/body.html:66
 msgid "About Us"
 msgstr "O nás"
 
-#: templates/body.html:96
+#: templates/body.html:99
 msgid "Go to top of page"
 msgstr "Návrat na vrchol stránky"
 
-#: templates/body.html:98
+#: templates/body.html:101
 #, python-format
 msgid ""
 "%(pycontm)s is a trademark for worldwide conference activities claimed by"
@@ -71,25 +76,25 @@ msgstr ""
 "%(pycontm)s je ochranná známka %(psf)s pre celosvetové konferenčné "
 "aktivity."
 
-#: templates/body.html:100
+#: templates/body.html:103
 msgid "Python Software foundation"
 msgstr "Python Software foundation"
 
-#: templates/body.html:102
+#: templates/body.html:105
 #, python-format
 msgid "PyCon SK is organized by volunteers from %(spy)s."
 msgstr "PyCon SK je organizovaný dobrovoľníkmi z %(spy)s."
 
-#: templates/body.html:103
+#: templates/body.html:106
 msgid "SPy o.z."
 msgstr "SPy o.z."
 
-#: templates/body.html:103
+#: templates/body.html:106
 #, python-format
 msgid "Our <a href=\"%(url)s\">Privacy Policy</a>."
 msgstr "Naše pravidlá pre <a href=\"%(url)s\">Ochranu súkromia</a>"
 
-#: templates/body.html:105
+#: templates/body.html:108
 #, python-format
 msgid ""
 "Found a bug? Missing some information? This is community managed website,"
@@ -99,12 +104,17 @@ msgstr ""
 "manažovaná webstránka, prispejte na našom %(github)se."
 
 #: templates/cfp.html:9
-msgid "The Call For Proposals will open soon!"
-msgstr "Podávanie návrhov na prednášky bude čoskoro otvorené!\""
+msgid "The Call For Proposals is open!"
+msgstr "Predkladanie prednášok je otvorené!"
 
-#: templates/cfp.html:12
+#: templates/cfp.html:12 templates/cfv.html:12
 msgid ""
-"PyCon is organized by the Python community and for the Python community. "
+"PyCon SK is organized by the Python community and for the Python "
+"community."
+msgstr "PyCon SK organizuje Python komunita pre komunitu."
+
+#: templates/cfp.html:13
+msgid ""
 "You're coming to the event, and that makes you part of the community. If "
 "you've done something that you think other people might be interested in,"
 " or that you think they should know about, please do consider telling us "
@@ -114,21 +124,20 @@ msgid ""
 "submit a talk proposal if you haven't spoken at the conference before. "
 "First-time speakers talk proposals are preferred."
 msgstr ""
-"PyCon organizuje Python komunita pre komunitu. Ak idete na túto "
-"konferenciu, stávate sa súčasťou tejto komunity. Pokiaľ ste spravili "
-"niečo, čo by mohlo zaujímať aj iných, alebo si myslíte, že ostatní by o "
-"tom mali vedieť, príďte nám o tom spraviť prednášku. Nechceme počúvať iba"
-" expertov a známe osobnosti - aj noví perspektívni rečníci sú tiež "
-"zaujímaví, preto sa, prosím, nenechajte odradiť pocitom, že nie ste "
-"expert alebo známa osobnosť. Toto je naša pozvánka, aby ste poslali návrh"
-" na prednášku, aj ak ste ešte nikdy na konferencií neprednášali. Rečníci "
-"vystupujúci prvýkrát budú uprednostňovaní."
+"Ak idete na túto konferenciu, stávate sa súčasťou tejto komunity. Pokiaľ "
+"ste spravili niečo, čo by mohlo zaujímať aj iných, alebo si myslíte, že "
+"ostatní by o tom mali vedieť, príďte nám o tom spraviť prednášku. "
+"Nechceme počúvať iba expertov a známe osobnosti - aj noví perspektívni "
+"rečníci sú tiež zaujímaví, preto sa, prosím, nenechajte odradiť pocitom, "
+"že nie ste expert alebo známa osobnosť. Toto je naša pozvánka, aby ste "
+"poslali návrh na prednášku, aj ak ste ešte nikdy na konferencií "
+"neprednášali. Rečníci vystupujúci prvýkrát budú uprednostňovaní."
 
-#: templates/cfp.html:15
+#: templates/cfp.html:16
 msgid "Where to submit your proposal"
 msgstr "Kam poslať Váš návrh na prednášku"
 
-#: templates/cfp.html:17
+#: templates/cfp.html:18
 msgid ""
 "We are glad you are interested in giving a talk at PyCon SK 2019! Submit "
 "your talk proposal with short abstract and your bio. All selected "
@@ -138,11 +147,11 @@ msgstr ""
 "návrh aj so stručným obsahom a životopisom. Všetci rečníci majú vstup na "
 "konferenciu zadarmo."
 
-#: templates/cfp.html:20
-msgid "Call for proposals for PyCon SK 2019 is open."
-msgstr ""
-
 #: templates/cfp.html:21
+msgid "Call for proposals for PyCon SK 2019 is open."
+msgstr "Podávanie návrhov na prednášky na PyCon SK 2019 je otvorené."
+
+#: templates/cfp.html:22
 msgid ""
 "The deadline for submissions is the end of 14th February 2019. If you "
 "have any questions, please contact us via email: info@pycon.sk or join "
@@ -152,15 +161,15 @@ msgstr ""
 "otázky, kontaktujte nás emailom: info@pycon.sk alebo sa pridajte na náš "
 "Slack kanál."
 
-#: templates/cfp.html:25
+#: templates/cfp.html:26
 msgid "Submit your proposal"
 msgstr ""
 
-#: templates/cfp.html:28
+#: templates/cfp.html:29
 msgid "Guidelines for Proposal Submission"
 msgstr "Pokyny pre podávanie návrhov"
 
-#: templates/cfp.html:30
+#: templates/cfp.html:31
 msgid ""
 "There is no official restriction on the topic that you propose a talk "
 "session. Talks about Python or the Python community are most likely to "
@@ -178,11 +187,11 @@ msgstr ""
 "môžete viac ako jednu, komisia Vás však vyzve, aby ste vybrali iba jednu "
 "prednášku (v prípade, že bude akceptovaných viac návrhov)."
 
-#: templates/cfp.html:36
+#: templates/cfp.html:37
 msgid "Talks"
 msgstr "Prednášky"
 
-#: templates/cfp.html:38
+#: templates/cfp.html:39
 msgid ""
 "Most talks are 30 minutes long, but we do offer a limited number of "
 "45-minute slots for important topics that promise to benefit from a more "
@@ -191,11 +200,11 @@ msgstr ""
 "Väčšina prednášok má dĺžku 30 minút, ale ponúkame aj 45 minútový vstup "
 "pre zaujímavé témy, ktoré budú vyžadovať dlhší vstup."
 
-#: templates/cfp.html:42
+#: templates/cfp.html:43
 msgid "Workshops"
 msgstr "Workshopy"
 
-#: templates/cfp.html:44
+#: templates/cfp.html:45
 msgid ""
 "As with the talks, we are looking for tutorials that can grow this "
 "community at any level! We aim for tutorials that will advance Python, "
@@ -209,9 +218,89 @@ msgstr ""
 "Vzhľadom na to, že návody trvajú dlhšie a budú v menších miestnostiach, "
 "vyžadujú oveľa viac prípravy."
 
-#: templates/cfp.html:48
+#: templates/cfp.html:49
 msgid "Recording release"
 msgstr "Súhlas so zverejnením nahrávok"
+
+#: templates/cfv.html:9
+msgid "We need you to help organize PyCon SK 2019!"
+msgstr "Potrebujeme ťa, aby si pomohol s organizáciou PyCon SK 2019!"
+
+#: templates/cfv.html:13
+msgid ""
+"All of our staff members are volunteers. We are looking for a new "
+"memebers to join the team of organizers."
+msgstr ""
+
+#: templates/cfv.html:14
+msgid ""
+"This is great opportunity to meet people, make new friends and get the "
+"opportunity to learn new things."
+msgstr ""
+
+#: templates/cfv.html:18
+msgid ""
+"As a volunteer you get a free ticket to the  conference as a thank you "
+"for making the change  in our society."
+msgstr ""
+
+#: templates/cfv.html:19
+#, python-format
+msgid ""
+"If you send more than 40 hours during the year as a volunteer you can "
+"give 3%% to any registered non-profit in your tax return."
+msgstr ""
+
+#: templates/cfv.html:36
+msgid "Your name"
+msgstr "Tvoje meno"
+
+#: templates/cfv.html:45
+msgid "Your phone"
+msgstr "Tvoj mobil"
+
+#: templates/cfv.html:54
+msgid "Something about you"
+msgstr "Niečo o tebe"
+
+#: templates/cfv.html:56
+msgid ""
+"We would like to know you, write something about yourself and also why "
+"you would like to help out..."
+msgstr "Radi by sme vedeli niečo o tebe, ale aj prečo nám chceš pomôcť..."
+
+#: templates/cfv.html:64
+msgid "What is your time estimate you can spend as volunteer?"
+msgstr ""
+"Napíš časový odhad koľko by si sa mohol(a) venovať dobrovoľníctvu pre SPy"
+" o.z.?"
+
+#: templates/cfv.html:66
+msgid "We need just rought estimate, for example: our daily, two hours a week..."
+msgstr "Stačí orientačna informácia, napr. hodina denne, dve hodiny týždenne..."
+
+#: templates/cfv.html:74
+msgid "What would you like to do?"
+msgstr "Je niečo konkrétne čo by si rad(a) robil(a)?"
+
+#: templates/cfv.html:76
+msgid ""
+"Let us know what you are experienced in? If you have a vision and no "
+"experience, that is alright, write down what you would like to do and "
+"surely we'll find a tasks to realize the vision."
+msgstr ""
+"Ak nie niečo v čom máš skúsenosti o ktoré sa chceš s nami podeliť napíš "
+"nám čo to je? Ak máš predstavu čo chceš robiť a nemáš žiadne skúsenosti, "
+"nevadí podeľ sa s nami o svoje  predstavy s určite nájdeme úlohy v "
+"ktorých sa môžeš realizovať..."
+
+#: templates/cfv.html:84
+msgid "Where did you find out about SPy o.z.?"
+msgstr "Odkiaľ si sa dozvedel(a) o SPy o.z.?"
+
+#: templates/cfv.html:104
+msgid "Looking forward to hearing from you..."
+msgstr ""
 
 #: templates/coc.html:11
 msgid ""
@@ -333,6 +422,10 @@ msgstr ""
 "Obťažovanie, sexistické, rasistické, alebo inak vyraďujúce vtipy sú "
 "nevhodné na našom stretnutí. Nebudeme tolerovať obťažovanie účastníkov "
 "stretnutia v akejkoľvek forme."
+
+#: templates/faq.html:6
+msgid "Frequently Asked Questions"
+msgstr ""
 
 #: templates/index.html:13 templates/venue.html:9
 msgid ""
